Design: Adjust hero image alignment to prevent cutting off new head

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1379,7 +1379,7 @@ table.dataTable>tbody>tr.child span.dtr-data {
     align-items: center;
     background-image: url('../images/hero.png');
     background-size: cover;
-    background-position: center right;
+    background-position: top right;
     background-repeat: no-repeat;
     padding: 0;
     overflow: hidden;
